# astrolabe

./: .env.example  .gitignore  COLAB_README.md  COMPLETE_OPTIMIZATION_RESULTS.md  EXPRESSION_FUSION_AND_AD.md  FINAL_PERFORMANCE_SUMMARY.md  FINAL_RESULTS.md  GPU_TO_CPU_ANALYSIS.md  HEYOKA_OPTIMIZATIONS.md  LITERATURE_REVIEW.md  MOJO_GPU_STRATEGY.md  MOJO_VS_HEYOKA_JIT.md  OPTIMIZATIONS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_JOURNEY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_CLARIFICATION.md  PER_CORE_ANALYSIS.md  PORTABILITY_TEST.md  PRECISION_COMPARISON.md  PROFILING_RESULTS.md  README.md  README_BENCHMARK.md  README_OPTIMIZATIONS.md  SERVER_INSTALLATION_GUIDE.md  SGP4_GPU_Colab.ipynb  SGP4_VALIDATION_REPORT.md  TIER2_COMPLETE.md  TIER2_FINAL.md  TIER2_RESULTS.md  ULTIMATE_RESULTS.md  X86_VS_ARM_RESULTS.md  benchmark_comparison.py  benchmark_heyoka.py  compare_precision.py  deploy_100k_test.py  deploy_halley_test.py  deploy_micro_test.py  deploy_precision_test.py  inspect_heyoka.py  (+6 more)
.github/workflows/: update-tles.yml
benchmarks/: COMPARISON.md  benchmark_heyoka.py  benchmark_python.py  compare_results.py  run_all.py  validate_sgp4.py
scripts/: check_db.py  deploy_avx512.py  deploy_gpu.py  deploy_home.py  deploy_mojo_benchmark.py  deploy_mojo_gpu.py  deploy_two_phase.py  install_and_benchmark.py  populate_tles.py  profile_server.py  run_home_server.sh  run_remote_check.py  run_server_benchmark.py  setup_cron.sh  update_tles.py  verify_cron.py
src/astrolabe/: config.py  database.py  parser.py  spacetrack.py
src/gpu/: GPU_TASKS.md  README.md  diagnose_gpu.py  (+2 more)
(+45 files in other folders)
